# assignment-files-api

./: Dockerfile  README.md  api.yaml
.openapi-generator/: FILES
api-lib/: Cargo.toml  README.md
api-lib/api/: openapi.yaml
api-lib/docs/: default_api.md
api-lib/src/: lib.rs  models.rs
api-lib/src/server/: mod.rs
api-server/: Cargo.toml
api-server/src/: main.rs  server.rs
app/: Chart.yaml  values.yaml
app/templates/: .deployment.yaml.swo  .deployment.yaml.swp  .secrets.yaml.swp  deployment.yaml  secrets.yaml
docs/: FilesGet200ResponseInner.md
examples/client/: main.rs
examples/server/: server.rs
src/client/: mod.rs
