[package]
name = "api-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.58"
clap = "4.0.17"
env_logger = "0.9.1"
futures = "0.3.24"
hyper = "0.14.20"
log = "0.4.17"
logger = "0.4.0"
openapi_client = { version = "3.0.1", path = "../api-lib" }
openssl = "0.10.42"
rust-s3 = "0.32.3"
swagger = "6.2.1"
tokio = { version = "1.21.2", features = ["rt", "rt-multi-thread", "macros"] }
tokio-openssl = "0.6.3"
